// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestingWatermark renders full variant 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={
    {
      "alignItems": "flex-end",
      "opacity": 0,
      "position": "absolute",
      "right": 12,
      "top": 60,
      "zIndex": 9999,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.75)",
          "borderColor": "rgba(255, 184, 0, 0.3)",
          "borderRadius": 6,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        {
          "borderRadius": 10,
          "gap": 8,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
        },
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <View
        color="#FFB800"
        size={14}
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFB800",
              "fontSize": 8,
              "fontWeight": "700",
              "letterSpacing": 0.8,
              "textTransform": "uppercase",
            },
            {
              "fontSize": 10,
              "letterSpacing": 1,
            },
          ]
        }
      >
        TESTING PROTOTYPE
      </Text>
      <Text
        style={
          {
            "color": "rgba(255, 184, 0, 0.7)",
            "fontSize": 8,
            "marginTop": 1,
          }
        }
      >
        ML Protection Active
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#00ff88",
          "borderRadius": 3,
          "height": 6,
          "marginLeft": 4,
          "width": 6,
        }
      }
    />
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "rgba(0, 0, 0, 0.6)",
        "borderRadius": 4,
        "flexDirection": "row",
        "gap": 4,
        "marginTop": 6,
        "paddingHorizontal": 8,
        "paddingVertical": 4,
      }
    }
  >
    <View
      color="rgba(255, 184, 0, 0.7)"
      size={10}
    />
    <Text
      style={
        {
          "color": "rgba(255, 184, 0, 0.7)",
          "fontSize": 8,
        }
      }
    >
      For demonstration purposes only
    </Text>
  </View>
</View>
`;

exports[`TestingWatermark renders minimal variant 1`] = `
<View
  collapsable={false}
  pointerEvents="none"
  style={
    {
      "alignItems": "flex-end",
      "opacity": 0,
      "position": "absolute",
      "right": 12,
      "top": 60,
      "zIndex": 9999,
    }
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.75)",
          "borderColor": "rgba(255, 184, 0, 0.3)",
          "borderRadius": 6,
          "borderWidth": 1,
          "flexDirection": "row",
          "gap": 4,
          "paddingHorizontal": 8,
          "paddingVertical": 4,
        },
        false,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "height": 16,
          "justifyContent": "center",
          "width": 16,
        }
      }
    >
      <View
        color="#FFB800"
        size={10}
      />
    </View>
    <View
      style={
        {
          "alignItems": "flex-start",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFB800",
              "fontSize": 8,
              "fontWeight": "700",
              "letterSpacing": 0.8,
              "textTransform": "uppercase",
            },
            false,
          ]
        }
      >
        TESTING PROTOTYPE
      </Text>
    </View>
  </View>
</View>
`;
